# LabQ

./: README.md
backend/: Cargo.toml
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs  user.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: db.rs  lib.rs
backend/crates/infrastructure/src/entities/: user.rs
backend/crates/infrastructure/src/persistence/: user_repo.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: create_user_table.rs  lib.rs
backend/crates/presentation/: Cargo.toml
backend/crates/presentation/src/: main.rs
backend/crates/presentation/src/dto/: auth.rs
backend/crates/presentation/src/handlers/: auth_handler.rs
backend/crates/presentation/src/security/: argon_hasher.rs  jwt_service.rs  mod.rs
backend/crates/presentation/src/web/: cors.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/constants/: api.ts  config.ts  urls.ts
frontend/src/react/context/: AuthContext.tsx
frontend/src/react/pages/: One.tsx  Three.tsx  Two.tsx
frontend/src/react/router/: AppRoutes.tsx
frontend/src/scripts/backend/: authorization.ts
frontend/src/scripts/helpers/: validation.ts
frontend/src/scripts/hooks/: useAuth.ts
frontend/src/shared/auth/: types.ts
frontend/src/styles/: __fonts.scss  __mixins.scss  __reset.scss  __variables.scss  global.scss
(+64 files in other folders)
