[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { version = "0.1.0", path = "../application" }
async-trait = "0.1.89"
chrono = "0.4.44"
domain = { version = "0.1.0", path = "../domain" }
sea-orm = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = "1.0.228"
tokio = { version = "1.51.1", features = ["full"] }

