[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { version = "0.1.0", path = "../application" }
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.44"
domain = { version = "0.1.0", path = "../domain" }
dotenvy = "0.15.7"
infrastructure = { version = "0.1.0", path = "../infrastructure" }
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
migration = { path = "../migration" }
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
